@@ -7,14 +7,11 @@ import com.ssafy.peachptich.dto.CustomUserDetails;
 import com.ssafy.peachptich.dto.request.ChatRequest;
 import com.ssafy.peachptich.dto.request.UserChatRequest;
 import com.ssafy.peachptich.dto.response.ChatReportListResponse;
-import com.ssafy.peachptich.entity.Chat;
-import com.ssafy.peachptich.entity.ChatHistory;
-import com.ssafy.peachptich.entity.ChatReport;
-import com.ssafy.peachptich.entity.TotalReport;
-import com.ssafy.peachptich.repository.ChatHistoryRepository;
-import com.ssafy.peachptich.repository.ChatRepository;
-import com.ssafy.peachptich.repository.ReportRepository;
-import com.ssafy.peachptich.repository.TotalReportRepository;
+import com.ssafy.peachptich.dto.response.SpeakingHabitsResponse;
+import com.ssafy.peachptich.dto.response.TotalReportResponse;
+import com.ssafy.peachptich.entity.*;
+import com.ssafy.peachptich.repository.*;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
@@ -33,11 +30,15 @@ import java.util.stream.Collectors;
 public class ChatServiceImpl implements ChatService {
     private final RedisTemplate<String, String> redisTemplate;
     private final RedisTemplate<String, Object> objectRedisTemplate;
+
     private final ChatRepository chatRepository;
     private final ReportRepository reportRepository;
     private final TotalReportRepository totalReportRepository;
-    private final ObjectMapper objectMapper;
+    private final KeywordRepository keywordRepository;
     private final ChatHistoryRepository chatHistoryRepository;
+
+    private final ObjectMapper objectMapper;
+
     private static  final String CHAT_KEY_PREFIX = "chat:";
 
 
@@ -88,22 +89,19 @@ public class ChatServiceImpl implements ChatService {
             throw new RuntimeException("채팅 저장 실패", e);
         }
     }
-//}
-//    @Override
-//    public List<Chat> getAllChats() {
-//        return null;
-//    }
 //
 //    @Override
 //    public Chat getChatDetail(Long chatId) {
 //        return null;
 //    }
 //
+    // 랜덤 스크립트
     @Override
     public Chat getRandomChat() {
         return chatRepository.findRandomChat();
     }
 
+    // 사용자 대화 redis 저장
     @Override
     public void saveUserChat(Long historyId, String message, Long userId) {
         try {
@@ -120,25 +118,75 @@ public class ChatServiceImpl implements ChatService {
         }
     }
 
+    // 대화 리포트 데이터 띄우기
     @Override
-    public ChatReport getReport() {
-        return reportRepository.findReport();
+    public ChatReport getReport(Long userId, Long chatHistoryId) {
+        return reportRepository.findByUserIdAndChatHistoryId(userId, chatHistoryId)
+                .orElseThrow(() -> new EntityNotFoundException("Chat Report not found"));
     }
 
-    @Override
-    public TotalReport getTotalReport() {
-        TotalReport totalReport = getTotalReport();
 
-        List<ChatReport> chatReports = reportRepository.findAllByOrderByChatHistory_CreatedAtDesc();
+    @Override
+    public TotalReportResponse getTotalReport(Long userId) {
+        TotalReport totalReport = totalReportRepository.findByUserId(userId)
+                .orElseThrow(() -> new EntityNotFoundException("TotalReport not found"));
+
+        // ChatReport 목록 조회 및 DTO 변환
+        List<ChatReport> chatReports = reportRepository.findAllByUserIdOrderByChatHistory_CreatedAtDesc(userId);
 
         List<ChatReportListResponse> chatReportListResponses = chatReports.stream()
-                .map(report -> ChatReportListResponse.builder()
-                .reportId(report.getReportId())
-                .summary(report.getSummary())
-                        .chatTime(report.getChatTime())
+                .map(report -> {
+
+                    String keyword1 = keywordRepository.findByKeywordId(report.getChatHistory().getKeyword1Id())
+                            .map(Keyword::getKeyword)
+                            .orElse(null);
+
+                    // keyword2Id로 keyword 조회 (있는 경우에만)
+                    String keyword2 = report.getChatHistory().getKeyword2Id() != null ?
+                            keywordRepository.findByKeywordId(report.getChatHistory().getKeyword2Id())
+                                    .map(Keyword::getKeyword)
+                                    .orElse(null)
+                            : null;
+
+
+                    // 현재 조회하는 사용자가 user1인 경우 user2의 이름을, user2인 경우 user1의 이름을 표시
+                    String partnerName;
+                    if (userId.equals(report.getChatHistory().getUser1Id())) {
+                        partnerName = report.getChatHistory().getUser2Name() != null ?
+                                report.getChatHistory().getUser2Name() : "AI";
+                    } else {
+                        partnerName = report.getChatHistory().getUser1Name();
+                    }
+
+                    return ChatReportListResponse.builder()
+                            .reportId(report.getReportId())
+                            .partnerName(partnerName)  // 상대방 이름만 전달
+                            .keyword1(keyword1)
+                            .keyword2(keyword2)
+                            .build();
+                })
+                .toList();
+
+        List<SpeakingHabitsResponse> speakingHabitDtos = totalReport.getSpeakingHabits().stream()
+                .map(habit -> SpeakingHabitsResponse.builder()
+                        .wordId(habit.getWordId())
+                        .word(habit.getWord())
+                        .count(habit.getCount())
                         .build())
-                .collect(Collectors.toList());
-        return totalReportRepository.findTotalReport(); }
+                .toList();
+
+        return TotalReportResponse.builder()
+                .totalReportId(totalReport.getTotalReportId())
+                .userId(totalReport.getUser().getUserId())
+                .ansCount(totalReport.getAnsCount())
+                .questCount(totalReport.getQuestCount())
+                .totalChatTime(totalReport.getTotalChatTime())
+                .speakingHabits(speakingHabitDtos)
+                .chatReports(chatReportListResponses)
+                .build();
+    }
+
+
 //
 //    @Override
 //    public List<Chat> getChatsByUserId(Long userId) {
